@@ -11,7 +11,7 @@
 
 	<!-- Configs -->
 	<config name="minimum_supported_wp_version" value="5.6" />
-	<config name="testVersion" value="7.0" />
+	<config name="testVersion" value="7.4" />
 
 	<!-- Rules -->
 	<rule ref="WooCommerce-Core" >
